fixed bg image issue during alignment

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -6,13 +6,10 @@
 
 #header-pic {
   background-image: url("band1.jpg");
-  opacity: 0.5;
+  
   
 }
 
-#header-text {
-    color: black;
-}
 
 
 
